--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -32,13 +32,13 @@ button {
     background-color: #00000000;
     border: none;
     
-    width: 17%;
+    width: 20%;
     height: 100%;
     padding: 1% 3%;
 }
 
 button img {
-    width: 100%;
+    width: 110%;
     height: auto;
     vertical-align: middle;
 }
